# helixite

./: .gitignore  AGENTS.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  concepts.md  examples.md  getting-started.md  indexing.md  querying.md  storage.md  transactions.md  vector-search.md
helixite/: Cargo.toml  README.md
helixite/benches/: deletes.rs  edge_writes.rs  label_query.rs  mixed_workload.rs  node_reads.rs  node_writes.rs  property_filter.rs  (+3 more)
ivy/: AGENTS.md  Cargo.toml  README.md
ivy/benches/: deletes.rs  edge_writes.rs  label_query.rs  mixed_workload.rs  node_reads.rs  node_writes.rs  property_filter.rs  storage_comparison.rs  traversal.rs  vector.rs
ivy/src/: AGENTS.md  README.md  config.rs  db.rs  edge.rs  error.rs  id.rs  lib.rs  stats.rs  txn.rs
ivy/src/command/: AGENTS.md  README.md  indexes.rs
ivy/src/index/: AGENTS.md  README.md  codec.rs  edges.rs  mod.rs  nodes.rs  properties.rs
ivy/src/index/vector/: AGENTS.md  README.md  hnsw.rs  keys.rs  mod.rs
ivy/src/index/vector/similarity/: AGENTS.md  README.md  cosine.rs  dot.rs  mod.rs
ivy/src/query/: AGENTS.md  README.md  edges.rs  nodes.rs  pagination.rs
ivy/src/query/traversal/: AGENTS.md  README.md  mod.rs  multi.rs  single.rs
ivy/src/storage/: AGENTS.md  README.md  env.rs  lmdb.rs
ivy/tests/: command.rs  db.rs  edge.rs  error.rs  id.rs  node.rs  query.rs  storage.rs  txn.rs  value.rs
ivy/tests/command/: indexes.rs
ivy/tests/index/: codec.rs
ivy/tests/query/: edges.rs  nodes.rs  traversal.rs  vector.rs
ivy/tests/storage/: lmdb.rs  memory.rs
(+66 files in other folders)
