[package]
name = "ivy"
version = "0.1.0"
edition = "2024"
description = "Embedded graph-vector database for Rust"
license = "MIT"

[dependencies]
heed = "0.21"
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "2"
rand = "0.9"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "node_writes"
harness = false

[[bench]]
name = "edge_writes"
harness = false

[[bench]]
name = "node_reads"
harness = false

[[bench]]
name = "label_query"
harness = false

[[bench]]
name = "property_filter"
harness = false

[[bench]]
name = "traversal"
harness = false

[[bench]]
name = "vector"
harness = false

[[bench]]
name = "mixed_workload"
harness = false

[[bench]]
name = "deletes"
harness = false

[[bench]]
name = "storage_comparison"
harness = false
